--- a/WWR/styles/style.css
+++ b/WWR/styles/style.css
@@ -3,6 +3,14 @@
     margin: 0 auto;
 }
 
+h1, h2, h3, h4 {
+    font-family: arial, serif, sans-serif;
+}
+
+p, a {
+    font-family: helvetica, serif, sans-serif;
+}
+
 #hero-msg h1, #hero-msg h4 {
     text-align: center;
 } 
@@ -15,8 +23,17 @@ main section {
     text-align: center;
 }
 
+main section img {
+    box-sizing: border-box;
+}
+
 body {
     background-color: #FFFFFF;
+    padding: 0;
+    margin: 0;
+}
+h2 {
+    margin: 0;
 }
 
 header {
@@ -27,6 +44,7 @@ nav a {
     color: #000000;
     text-decoration: none;
     text-align: center;
+    padding: 35px;
 }
 
 nav a:hover {
@@ -38,6 +56,9 @@ nav a:hover {
     background-color: #006994;
     color: #FFFFFF;
     text-decoration: none;
+    font-size: 18px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 
 .book:hover, .join:hover {
@@ -52,19 +73,26 @@ nav a:hover {
 
 .msg {
     background-color: #006994;
+    line-height: 1.5em;
+    padding:35px;
 }
 
 .msg h2 {
     color: #006994;
+    font-family: arial, serif, sans-serif;
 }
 
 .msg p {
     color: #006994;
+    font-size: .8em;
+    padding-bottom:15px;
 }
 
 footer {
     background-color: #006994;
     color: #000000;
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 
 footer a {
@@ -82,8 +110,15 @@ footer p {
     text-decoration: underline;
 } 
 
+footer .social img {
+    padding-top:15px;
+}
+
 .home-title {
     color: #000000;
+    font-family: arial, serif, sans-serif;
+    font-size: 2em;
+    margin-top: 10px;
 }
 
 h4 {
@@ -96,6 +131,18 @@ h4 {
 
 #hero-img {
     width: 100%;
+}
+
+#logo_link {
+    padding-top: 5px;
+}
+
+.rivers-card, .camping-card, .rapids-card {
+    margin: 200px 0;
+}
+
+.card-img {
+    border: 10px black solid;
 }
 
 
