--- a/WWR/styles/style.css
+++ b/WWR/styles/style.css
@@ -11,7 +11,6 @@ p, a {
     font-family: helvetica, serif, sans-serif;
 }
 
-
 #hero-img {
     width: 100%;
 }
@@ -30,6 +29,7 @@ p, a {
     grid-column: 1/4;
     grid-row: 1/3;
     z-index: -1;
+    width: 100%;
 }
 
 #hero-msg {
@@ -38,13 +38,13 @@ p, a {
     margin-top: 100px;
 }
 
-#hero-msg h4{
+#hero-msg h4 {
     color: #FFFFFF;
 }
 
-.main {
+.home-grid {
     display: grid;
-    grid-template-columns: 1fr, 1fr, 1fr, 1fr, 1fr, 1fr, 1fr, 1fr, 1fr, 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 }
 
 
@@ -73,7 +73,12 @@ h2 {
 header {
     background-color: #006994;
     display:grid;
-    grid-template-columns: 150px, auto;
+    grid-template-columns: 150px auto;
+}
+
+.logo {
+    height: 50px;
+    width: 50px;
 }
 
 nav {
@@ -178,7 +183,7 @@ h4 {
     width: 80px;
 }
 
-#logo_link {
+#logo-link {
     padding-top: 5px;
     justify-self: center;
     align-self: center;
