--- a/DogTraining/styles/style.css
+++ b/DogTraining/styles/style.css
@@ -1,3 +1,112 @@
-img {
+@import url('https://fonts.googleapis.com/css?family=IM+Fell+French+Canon+SC|Lato');
+@import url('https://fonts.googleapis.com/css2?family=Patua+One&family=Rubik&display=swap');
+
+:root {
+    /* change the values below to your colors from your palette */
+    --primary-color: #F5DFBB   ;
+    --secondary-color: #0E9594 ;
+    --accent1-color: #F2542D;
+    --accent2-color: #562C2C;
+  
+    /* change the values below to your chosen font(s) */
+    --heading-font: 'Patua One', serif;
+    --paragraph-font: 'Rubik', sans-serif;
+  
+    /* these colors below should be chosen from among your palette colors above */
+    --headline-color-on-white: #396E94;  /* headlines on a white background */ 
+    --headline-color-on-color: white; /* headlines on a colored background */ 
+    --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
+    --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
+    --paragraph-background-color: #396E94  ;
+    --nav-link-color: #396E94;
+    --nav-background-color: #D4AC0D;
+    --nav-hover-link-color: white;
+    --nav-hover-background-color: #396E94;
+  }
+
+img { 
     max-width: 1000px;
+}
+
+.logo {width:50px; height: 50px;}
+nav {
+    height:50px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-items: flex-start;
+    align-items: center;
+    background-color: var(--nav-background-color);
+}
+
+nav a {
+    color: var(--nav-link-color);
+    margin: 0 10px;
+}
+
+a:hover {
+    text-decoration: none;
+    color: var(--nav-hover-link-color);
+}
+
+#header-image {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 100%;
+    width: 75%;
+    margin: 10px auto;
+    border: 1px solid black;
+}
+
+#header-image img {
+    width: 100%;
+    grid-column: 1/3;
+    grid-row: 1/2;
+}
+
+#header-image h1 {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    z-index: 100;
+    margin-left: 10px;
+    font-family: var(--heading-font);
+}
+
+.main-content-box {
+    width:75%;
+    display: grid;
+    grid-template-columns: 75% 25%;
+    margin: 20px auto;
+    border: 1px solid black;
+    padding: 10px
+}
+
+.main-content-box p {
+    grid-column: 1/2;
+    width: 100%;
+    font-family: var(--paragraph-font);
+}
+
+.main-content-box img {
+    grid-column: 2/3;
+    width: 100%;
+    margin: auto 0;
+}
+
+footer {
+    height:100px;
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+    margin-bottom: 0;
+    display: flex;
+    flex-direction: row;
+    justify-items: flex-start;
+    align-items: center;
+    background-color: var(--nav-background-color);
+}
+
+footer a {
+    margin-left: 10px;
+    color: var(--nav-link-color);
 }
