--- a/DogTraining/styles/style.css
+++ b/DogTraining/styles/style.css
@@ -72,25 +72,47 @@ a:hover {
     font-family: var(--heading-font);
 }
 
-.main-content-box, .training-content-box {
+.main-content-box, .training-content-box, .contact-content-box {
     width:75%;
     display: grid;
     grid-template-columns: 75% 25%;
     margin: 20px auto;
     border: 1px solid black;
-    padding: 10px
+    padding: 20px;
 }
 
-.main-content-box p, .training-content-box p, ul {
+.main-content-box p, .training-content-box p, ul, .contact-content-box p {
     grid-column: 1/2;
     width: 100%;
     font-family: var(--paragraph-font);
 }
 
-.main-content-box img, .training-content-box img {
+.main-content-box img, .training-content-box img, .contact-content-box img {
     grid-column: 2/3;
     width: 100%;
     margin: auto 0;
+}
+
+.contact-content-container {
+    display: grid;
+    grid-template-columns: 30% 20% 30% 20%;
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.contact-content-box-one{
+    grid-column: 1/3;
+}
+
+.contact-content-box-two{
+    grid-column: 3/5;
+    display: flex;
+    flex-direction: row;
+}
+
+.contact-content-box-two img {
+    width:40%;
 }
 
 footer {
